Assignment W3-b v 1.8
